<resources>
    <string name="app_name">SubGuardApp</string>
    <string name="app_name2">SubGuard</string>

    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Konto</string>
    <string name="menu_details">Szczegóły</string>
    <string name="menu_grid">Moje subskrypcje</string>
    <string name="menu_logout">Wyloguj</string>

    <string name="logo">logo</string>
    <string name="login">Zaloguj się</string>
    <string name="zatwierd">Zatwierdź</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="register">Rejestracja</string>

    <string name="subscription">Subskrypcja</string>
    <string name="price">Cena</string>
    <string name="add_new_subscription">Dodaj nową subskrypcję</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="example_user_name" >Jan Oszczędny</string>
    <string name="example_user_email" >jan.oszczedny@gmail.com</string>
    <string name="register2">Zarejestruj się</string>

    <string-array name="subscription_propositions">
        <item>Netflix</item>
        <item>Spotify</item>
        <item>HBO GO</item>
        <item>YouTube</item>
        <item>Amazon Prime</item>
        <item>Allegro Smart</item>
        <item>Disney+</item>
        <item>TIDAL</item>
        <item>Player.pl</item>
        <item>NC GO</item>
        <item>CP GO</item>
        <item>Wyborcza</item>
    </string-array>


</resources>