<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_grid"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_grid" />
        <item
            android:id="@+id/nav_details"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_details" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bank"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_logout"
            android:icon="?attr/homeAsUpIndicator"
            android:title="@string/menu_logout" />
    </group>
</menu>