<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_grid"
        android:name="com.example.subguardapp.ui.grid.GridFragment"
        android:label="@string/menu_grid"
        tools:layout="@layout/fragment_grid" />

    <fragment
        android:id="@+id/nav_details"
        android:name="com.example.subguardapp.ui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.subguardapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.subguardapp.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>